Bug 365884 - KDeveop open saved session segfaulting [VcsOverlayProxyModel::repositoryBranchChanged]
Summary: KDeveop open saved session segfaulting [VcsOverlayProxyModel::repositoryBranc...
Status: RESOLVED FIXED
Alias: None
Product: kdevelop
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4.7.3
Platform: Ubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: kdevelop-bugs-null
URL:
Keywords: drkonqi
: 363002 368432 (view as bug list)
Depends on:
Blocks:
 
Reported: 2016-07-20 07:16 UTC by roland
Modified: 2016-09-08 10:20 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 1.7.4
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description roland 2016-07-20 07:16:29 UTC
Application: kdevelop (4.7.3)
KDE Platform Version: 4.14.16
Qt Version: 4.8.7
Operating System: Linux 4.4.0-30-generic x86_64
Distribution: Ubuntu 16.04 LTS

-- Information about the crash:
Open KDevelop with previous saves session. Has to contain more than one project. Loads one project then segfaults on the second. Happens every time for saved session

The crash can be reproduced every time.

-- Backtrace:
Application: KDevelop (kdevelop), signal: Segmentation fault
Using host libthread_db library "/lib/x86_64-linux-gnu/libthread_db.so.1".
[Current thread is 1 (Thread 0x7f863d2fd940 (LWP 3173))]

Thread 10 (Thread 0x7f8576ffd700 (LWP 3199)):
#0  syscall () at ../sysdeps/unix/sysv/linux/x86_64/syscall.S:38
#1  0x00007f863a0d0672 in _q_futex (val2=0, addr2=0x0, timeout=0x0, val=2, op=0, addr=0x24e68e0) at thread/qmutex_unix.cpp:99
#2  QMutexPrivate::wait (this=this@entry=0x24e68e0, timeout=timeout@entry=-1) at thread/qmutex_unix.cpp:113
#3  0x00007f863a0cc925 in QMutex::lockInternal (this=this@entry=0x7f863c4914d0 <(anonymous namespace)::tryLockMutex>) at thread/qmutex.cpp:450
#4  0x00007f863c2798ad in QMutex::lockInline (this=0x7f863c4914d0 <(anonymous namespace)::tryLockMutex>) at /usr/include/qt4/QtCore/qmutex.h:190
#5  QMutexLocker::QMutexLocker (m=0x7f863c4914d0 <(anonymous namespace)::tryLockMutex>, this=<synthetic pointer>) at /usr/include/qt4/QtCore/qmutex.h:109
#6  KDevelop::ForegroundLock::relock (this=0x7f8576ffb920) at /build/kdevplatform-FEhUv4/kdevplatform-1.7.3/interfaces/foregroundlock.cpp:158
#7  0x00007f8638993b07 in KDevelop::ParseJob::readContents (this=0x7b05680) at /build/kdevplatform-FEhUv4/kdevplatform-1.7.3/language/backgroundparser/parsejob.cpp:257
#8  0x00007f857e3de468 in PreprocessJob::readContents (this=this@entry=0x7b05cb0) at /build/kdevelop-jGcNEc/kdevelop-4.7.3/languages/cpp/preprocessjob.cpp:652
#9  0x00007f857e3e1c88 in PreprocessJob::run (this=<optimized out>) at /build/kdevelop-jGcNEc/kdevelop-4.7.3/languages/cpp/preprocessjob.cpp:212
#10 0x00007f862fe6bcc2 in ThreadWeaver::JobRunHelper::runTheJob (this=this@entry=0x7f8576ffcc30, th=th@entry=0x7f8564003380, job=job@entry=0x7b05cb0) at ../../../threadweaver/Weaver/Job.cpp:106
#11 0x00007f862fe6bece in ThreadWeaver::Job::execute (this=0x7b05cb0, th=0x7f8564003380) at ../../../threadweaver/Weaver/Job.cpp:135
#12 0x00007f862fe6dbbb in ThreadWeaver::JobCollectionJobRunner::execute (this=0x7b06060, t=0x7f8564003380) at ../../../threadweaver/Weaver/JobCollection.cpp:82
#13 0x00007f862fe6b59b in ThreadWeaver::Thread::run (this=0x7f8564003380) at ../../../threadweaver/Weaver/Thread.cpp:108
#14 0x00007f863a0d1e3c in QThreadPrivate::start (arg=0x7f8564003380) at thread/qthread_unix.cpp:352
#15 0x00007f8635ef96fa in start_thread (arg=0x7f8576ffd700) at pthread_create.c:333
#16 0x00007f8639a12b5d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 9 (Thread 0x7f85777fe700 (LWP 3198)):
#0  pthread_cond_timedwait@@GLIBC_2.3.2 () at ../sysdeps/unix/sysv/linux/x86_64/pthread_cond_timedwait.S:225
#1  0x00007f863a0d2384 in QWaitConditionPrivate::wait (time=30, this=0x24e6970) at thread/qwaitcondition_unix.cpp:84
#2  QWaitCondition::wait (this=this@entry=0x7f863c4914b8 <(anonymous namespace)::condition>, mutex=mutex@entry=0x7f863c4914c8 <(anonymous namespace)::waitMutex>, time=time@entry=30) at thread/qwaitcondition_unix.cpp:158
#3  0x00007f863c279a74 in KDevelop::ForegroundLock::relock (this=0x7f85777fc920) at /build/kdevplatform-FEhUv4/kdevplatform-1.7.3/interfaces/foregroundlock.cpp:189
#4  0x00007f8638993b07 in KDevelop::ParseJob::readContents (this=0x78b0650) at /build/kdevplatform-FEhUv4/kdevplatform-1.7.3/language/backgroundparser/parsejob.cpp:257
#5  0x00007f857e3de468 in PreprocessJob::readContents (this=this@entry=0x78a19a0) at /build/kdevelop-jGcNEc/kdevelop-4.7.3/languages/cpp/preprocessjob.cpp:652
#6  0x00007f857e3e1c88 in PreprocessJob::run (this=<optimized out>) at /build/kdevelop-jGcNEc/kdevelop-4.7.3/languages/cpp/preprocessjob.cpp:212
#7  0x00007f862fe6bcc2 in ThreadWeaver::JobRunHelper::runTheJob (this=this@entry=0x7f85777fdc30, th=th@entry=0x63995a0, job=job@entry=0x78a19a0) at ../../../threadweaver/Weaver/Job.cpp:106
#8  0x00007f862fe6bece in ThreadWeaver::Job::execute (this=0x78a19a0, th=0x63995a0) at ../../../threadweaver/Weaver/Job.cpp:135
#9  0x00007f862fe6dbbb in ThreadWeaver::JobCollectionJobRunner::execute (this=0x78a41e0, t=0x63995a0) at ../../../threadweaver/Weaver/JobCollection.cpp:82
#10 0x00007f862fe6b59b in ThreadWeaver::Thread::run (this=0x63995a0) at ../../../threadweaver/Weaver/Thread.cpp:108
#11 0x00007f863a0d1e3c in QThreadPrivate::start (arg=0x63995a0) at thread/qthread_unix.cpp:352
#12 0x00007f8635ef96fa in start_thread (arg=0x7f85777fe700) at pthread_create.c:333
#13 0x00007f8639a12b5d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 8 (Thread 0x7f8577fff700 (LWP 3196)):
#0  pthread_cond_wait@@GLIBC_2.3.2 () at ../sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:185
#1  0x00007f863a0d23a6 in QWaitConditionPrivate::wait (time=18446744073709551615, this=0x29f6f40) at thread/qwaitcondition_unix.cpp:86
#2  QWaitCondition::wait (this=this@entry=0x27642b8, mutex=0x6083fe0, time=time@entry=18446744073709551615) at thread/qwaitcondition_unix.cpp:158
#3  0x00007f862fe69c9c in ThreadWeaver::WeaverImpl::blockThreadUntilJobsAreBeingAssigned (this=0x2764290, th=0x6458e90) at ../../../threadweaver/Weaver/WeaverImpl.cpp:370
#4  0x00007f862fe6c9a3 in ThreadWeaver::WorkingHardState::applyForWork (this=0x64ac470, th=0x6458e90, previous=0x2ad3cc0) at ../../../threadweaver/Weaver/WorkingHardState.cpp:68
#5  0x00007f862fe6b4ff in ThreadWeaver::Thread::run (this=0x6458e90) at ../../../threadweaver/Weaver/Thread.cpp:98
#6  0x00007f863a0d1e3c in QThreadPrivate::start (arg=0x6458e90) at thread/qthread_unix.cpp:352
#7  0x00007f8635ef96fa in start_thread (arg=0x7f8577fff700) at pthread_create.c:333
#8  0x00007f8639a12b5d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 7 (Thread 0x7f856ce69700 (LWP 3189)):
#0  0x00007f8633ac0ae4 in g_mutex_unlock () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#1  0x00007f8633a7b920 in g_main_context_prepare () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007f8633a7c2cb in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007f8633a7c4ac in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#4  0x00007f863a2122ce in QEventDispatcherGlib::processEvents (this=0x7f8568002c00, flags=...) at kernel/qeventdispatcher_glib.cpp:452
#5  0x00007f863a1e018f in QEventLoop::processEvents (this=this@entry=0x7f856ce68c40, flags=...) at kernel/qeventloop.cpp:149
#6  0x00007f863a1e04f5 in QEventLoop::exec (this=this@entry=0x7f856ce68c40, flags=...) at kernel/qeventloop.cpp:204
#7  0x00007f863a0cf549 in QThread::exec (this=this@entry=0x72feb90) at thread/qthread.cpp:538
#8  0x00007f863a1c0223 in QInotifyFileSystemWatcherEngine::run (this=0x72feb90) at io/qfilesystemwatcher_inotify.cpp:265
#9  0x00007f863a0d1e3c in QThreadPrivate::start (arg=0x72feb90) at thread/qthread_unix.cpp:352
#10 0x00007f8635ef96fa in start_thread (arg=0x7f856ce69700) at pthread_create.c:333
#11 0x00007f8639a12b5d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 6 (Thread 0x7f857dbfa700 (LWP 3185)):
#0  0x00007f8639a06e8d in poll () at ../sysdeps/unix/syscall-template.S:84
#1  0x00007f8633a7c39c in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007f8633a7c4ac in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007f863a2122ce in QEventDispatcherGlib::processEvents (this=0x7f85780008c0, flags=...) at kernel/qeventdispatcher_glib.cpp:452
#4  0x00007f863a1e018f in QEventLoop::processEvents (this=this@entry=0x7f857dbf9c90, flags=...) at kernel/qeventloop.cpp:149
#5  0x00007f863a1e04f5 in QEventLoop::exec (this=this@entry=0x7f857dbf9c90, flags=...) at kernel/qeventloop.cpp:204
#6  0x00007f863a0cf549 in QThread::exec (this=<optimized out>) at thread/qthread.cpp:538
#7  0x00007f863a0d1e3c in QThreadPrivate::start (arg=0x504fd90) at thread/qthread_unix.cpp:352
#8  0x00007f8635ef96fa in start_thread (arg=0x7f857dbfa700) at pthread_create.c:333
#9  0x00007f8639a12b5d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 5 (Thread 0x7f858e6c3700 (LWP 3177)):
#0  0x00007f8639a06e8d in poll () at ../sysdeps/unix/syscall-template.S:84
#1  0x00007f8633a7c39c in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007f8633a7c4ac in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007f863a2122ce in QEventDispatcherGlib::processEvents (this=0x7f85880008c0, flags=...) at kernel/qeventdispatcher_glib.cpp:452
#4  0x00007f863a1e018f in QEventLoop::processEvents (this=this@entry=0x7f858e6c2c90, flags=...) at kernel/qeventloop.cpp:149
#5  0x00007f863a1e04f5 in QEventLoop::exec (this=this@entry=0x7f858e6c2c90, flags=...) at kernel/qeventloop.cpp:204
#6  0x00007f863a0cf549 in QThread::exec (this=<optimized out>) at thread/qthread.cpp:538
#7  0x00007f863a0d1e3c in QThreadPrivate::start (arg=0x4aece08) at thread/qthread_unix.cpp:352
#8  0x00007f8635ef96fa in start_thread (arg=0x7f858e6c3700) at pthread_create.c:333
#9  0x00007f8639a12b5d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 4 (Thread 0x7f859d6e4700 (LWP 3176)):
#0  pthread_cond_timedwait@@GLIBC_2.3.2 () at ../sysdeps/unix/sysv/linux/x86_64/pthread_cond_timedwait.S:225
#1  0x00007f863a0d2384 in QWaitConditionPrivate::wait (time=1000, this=0x4202c40) at thread/qwaitcondition_unix.cpp:84
#2  QWaitCondition::wait (this=this@entry=0x41fcfb8, mutex=mutex@entry=0x41fcfc0, time=time@entry=1000) at thread/qwaitcondition_unix.cpp:158
#3  0x00007f86389bfca6 in KDevelop::DUChainPrivate::CleanupThread::run (this=0x41fcfa0) at /build/kdevplatform-FEhUv4/kdevplatform-1.7.3/language/duchain/duchain.cpp:283
#4  0x00007f863a0d1e3c in QThreadPrivate::start (arg=0x41fcfa0) at thread/qthread_unix.cpp:352
#5  0x00007f8635ef96fa in start_thread (arg=0x7f859d6e4700) at pthread_create.c:333
#6  0x00007f8639a12b5d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 3 (Thread 0x7f859e853700 (LWP 3175)):
#0  0x00007f8639a06e8d in poll () at ../sysdeps/unix/syscall-template.S:84
#1  0x00007f8633a7c39c in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007f8633a7c4ac in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007f863a2122ce in QEventDispatcherGlib::processEvents (this=0x7f85980008c0, flags=...) at kernel/qeventdispatcher_glib.cpp:452
#4  0x00007f863a1e018f in QEventLoop::processEvents (this=this@entry=0x7f859e852c40, flags=...) at kernel/qeventloop.cpp:149
#5  0x00007f863a1e04f5 in QEventLoop::exec (this=this@entry=0x7f859e852c40, flags=...) at kernel/qeventloop.cpp:204
#6  0x00007f863a0cf549 in QThread::exec (this=this@entry=0x2710a40) at thread/qthread.cpp:538
#7  0x00007f863a1c0223 in QInotifyFileSystemWatcherEngine::run (this=0x2710a40) at io/qfilesystemwatcher_inotify.cpp:265
#8  0x00007f863a0d1e3c in QThreadPrivate::start (arg=0x2710a40) at thread/qthread_unix.cpp:352
#9  0x00007f8635ef96fa in start_thread (arg=0x7f859e853700) at pthread_create.c:333
#10 0x00007f8639a12b5d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 2 (Thread 0x7f861fc69700 (LWP 3174)):
#0  pthread_cond_wait@@GLIBC_2.3.2 () at ../sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:185
#1  0x00007f86375eee1a in ?? () from /usr/lib/x86_64-linux-gnu/libQtScript.so.4
#2  0x00007f86375eee49 in ?? () from /usr/lib/x86_64-linux-gnu/libQtScript.so.4
#3  0x00007f8635ef96fa in start_thread (arg=0x7f861fc69700) at pthread_create.c:333
#4  0x00007f8639a12b5d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 1 (Thread 0x7f863d2fd940 (LWP 3173)):
[KCrash Handler]
#6  QList<QString>::QList (l=..., this=this@entry=0x7ffd36ca0340) at /usr/include/qt4/QtCore/qlist.h:122
#7  QStringList::QStringList (l=..., this=this@entry=0x7ffd36ca0340) at /usr/include/qt4/QtCore/qstringlist.h:71
#8  KDevelop::IPlugin::extensions (this=this@entry=0x0) at /build/kdevplatform-FEhUv4/kdevplatform-1.7.3/interfaces/iplugin.cpp:154
#9  0x00007f8585666c1b in KDevelop::IPlugin::extension<KDevelop::IBranchingVersionControl> (this=0x0) at /build/kdevplatform-FEhUv4/kdevplatform-1.7.3/interfaces/iplugin.h:177
#10 VcsOverlayProxyModel::repositoryBranchChanged (this=this@entry=0x6d43930, url=...) at /build/kdevplatform-FEhUv4/kdevplatform-1.7.3/plugins/projectmanagerview/vcsoverlayproxymodel.cpp:83
#11 0x00007f8585666f33 in VcsOverlayProxyModel::addProject (this=0x6d43930, p=<optimized out>) at /build/kdevplatform-FEhUv4/kdevplatform-1.7.3/plugins/projectmanagerview/vcsoverlayproxymodel.cpp:72
#12 0x00007f863a1f6010 in QMetaObject::activate (sender=sender@entry=0x2d506a0, m=m@entry=0x7f863c48f8c0 <KDevelop::IProjectController::staticMetaObject>, local_signal_index=local_signal_index@entry=1, argv=argv@entry=0x7ffd36ca0550) at kernel/qobject.cpp:3567
#13 0x00007f863c27d072 in KDevelop::IProjectController::projectOpened (this=this@entry=0x2d506a0, _t1=0x26ca810) at /build/kdevplatform-FEhUv4/kdevplatform-1.7.3/obj-x86_64-linux-gnu/interfaces/iprojectcontroller.moc:195
#14 0x00007f863cf41528 in KDevelop::ProjectController::projectImportingFinished (this=this@entry=0x2d506a0, project=0x26ca810) at /build/kdevplatform-FEhUv4/kdevplatform-1.7.3/shell/projectcontroller.cpp:820
#15 0x00007f863cf4c091 in KDevelop::ProjectPrivate::importDone (job=<optimized out>, this=0x2a33940) at /build/kdevplatform-FEhUv4/kdevplatform-1.7.3/shell/project.cpp:246
#16 KDevelop::Project::qt_static_metacall (_o=<optimized out>, _id=<optimized out>, _a=<optimized out>, _c=<optimized out>) at /build/kdevplatform-FEhUv4/kdevplatform-1.7.3/obj-x86_64-linux-gnu/shell/moc_project.cpp:93
#17 0x00007f863a1f6010 in QMetaObject::activate (sender=sender@entry=0x2b7be40, m=m@entry=0x7f863b998b00 <KJob::staticMetaObject>, local_signal_index=local_signal_index@entry=3, argv=argv@entry=0x7ffd36ca07b0) at kernel/qobject.cpp:3567
#18 0x00007f863b5efc92 in KJob::result (this=this@entry=0x2b7be40, _t1=_t1@entry=0x2b7be40) at ./kjob.moc:207
#19 0x00007f863b5efce0 in KJob::emitResult (this=this@entry=0x2b7be40) at ../../kdecore/jobs/kjob.cpp:318
#20 0x00007f8638d9b7f8 in KDevelop::FileManagerListJob::slotResult (this=0x2b7be40, job=<optimized out>) at /build/kdevplatform-FEhUv4/kdevplatform-1.7.3/project/filemanagerlistjob.cpp:98
#21 0x00007f8638d9b4c8 in KDevelop::FileManagerListJob::qt_static_metacall (_o=<optimized out>, _c=<optimized out>, _id=<optimized out>, _a=<optimized out>) at /build/kdevplatform-FEhUv4/kdevplatform-1.7.3/obj-x86_64-linux-gnu/project/filemanagerlistjob.moc:62
#22 0x00007f863a1f6010 in QMetaObject::activate (sender=sender@entry=0x77f0c10, m=m@entry=0x7f863b998b00 <KJob::staticMetaObject>, local_signal_index=local_signal_index@entry=3, argv=argv@entry=0x7ffd36ca09f0) at kernel/qobject.cpp:3567
#23 0x00007f863b5efc92 in KJob::result (this=this@entry=0x77f0c10, _t1=_t1@entry=0x77f0c10) at ./kjob.moc:207
#24 0x00007f863b5efce0 in KJob::emitResult (this=this@entry=0x77f0c10) at ../../kdecore/jobs/kjob.cpp:318
#25 0x00007f8637c50a1e in KIO::SimpleJob::slotFinished (this=this@entry=0x77f0c10) at ../../kio/kio/job.cpp:496
#26 0x00007f8637c5612e in KIO::ListJob::slotFinished (this=0x77f0c10) at ../../kio/kio/job.cpp:2725
#27 0x00007f863a1f6010 in QMetaObject::activate (sender=0x50469a0, m=m@entry=0x7f8638016ba0 <KIO::SlaveInterface::staticMetaObject>, local_signal_index=local_signal_index@entry=4, argv=argv@entry=0x0) at kernel/qobject.cpp:3567
#28 0x00007f8637cfc713 in KIO::SlaveInterface::finished (this=<optimized out>) at ./slaveinterface.moc:184
#29 0x00007f8637cff546 in KIO::SlaveInterface::dispatch (this=<optimized out>, _cmd=104, rawdata=...) at ../../kio/kio/slaveinterface.cpp:176
#30 0x00007f8637cfc39d in KIO::SlaveInterface::dispatch (this=0x50469a0) at ../../kio/kio/slaveinterface.cpp:92
#31 0x00007f8637ceebc1 in KIO::Slave::gotInput (this=0x50469a0) at ../../kio/kio/slave.cpp:344
#32 0x00007f863a1f6010 in QMetaObject::activate (sender=0x4d4a5b0, m=m@entry=0x7f86380112c0 <KIO::Connection::staticMetaObject>, local_signal_index=local_signal_index@entry=0, argv=argv@entry=0x0) at kernel/qobject.cpp:3567
#33 0x00007f8637c16600 in KIO::Connection::readyRead (this=<optimized out>) at ./connection.moc:105
#34 0x00007f8637c16ba4 in KIO::ConnectionPrivate::dequeue (this=0x275bdf0) at ../../kio/kio/connection.cpp:82
#35 0x00007f863a1fbdb1 in QObject::event (this=0x4d4a5b0, e=<optimized out>) at kernel/qobject.cpp:1222
#36 0x00007f863a70efdc in QApplicationPrivate::notify_helper (this=this@entry=0x259ce00, receiver=receiver@entry=0x4d4a5b0, e=e@entry=0x783ac50) at kernel/qapplication.cpp:4570
#37 0x00007f863a715f16 in QApplication::notify (this=this@entry=0x7ffd36ca1750, receiver=receiver@entry=0x4d4a5b0, e=e@entry=0x783ac50) at kernel/qapplication.cpp:4356
#38 0x00007f863bbda6aa in KApplication::notify (this=0x7ffd36ca1750, receiver=0x4d4a5b0, event=0x783ac50) at ../../kdeui/kernel/kapplication.cpp:311
#39 0x00007f863a1e190d in QCoreApplication::notifyInternal (this=0x7ffd36ca1750, receiver=receiver@entry=0x4d4a5b0, event=event@entry=0x783ac50) at kernel/qcoreapplication.cpp:955
#40 0x00007f863a1e53c6 in QCoreApplication::sendEvent (event=0x783ac50, receiver=0x4d4a5b0) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:231
#41 QCoreApplicationPrivate::sendPostedEvents (receiver=receiver@entry=0x0, event_type=event_type@entry=0, data=0x24e4200) at kernel/qcoreapplication.cpp:1579
#42 0x00007f863a1e56a3 in QCoreApplication::sendPostedEvents (receiver=receiver@entry=0x0, event_type=event_type@entry=0) at kernel/qcoreapplication.cpp:1472
#43 0x00007f863a21213e in QCoreApplication::sendPostedEvents () at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:236
#44 postEventSourceDispatch (s=0x25b2d00) at kernel/qeventdispatcher_glib.cpp:300
#45 0x00007f8633a7c1a7 in g_main_context_dispatch () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#46 0x00007f8633a7c400 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#47 0x00007f8633a7c4ac in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#48 0x00007f863a2122ae in QEventDispatcherGlib::processEvents (this=0x24e56a0, flags=...) at kernel/qeventdispatcher_glib.cpp:450
#49 0x00007f863a7bc616 in QGuiEventDispatcherGlib::processEvents (this=<optimized out>, flags=...) at kernel/qguieventdispatcher_glib.cpp:204
#50 0x00007f863a1e018f in QEventLoop::processEvents (this=this@entry=0x7ffd36ca15b0, flags=...) at kernel/qeventloop.cpp:149
#51 0x00007f863a1e04f5 in QEventLoop::exec (this=this@entry=0x7ffd36ca15b0, flags=...) at kernel/qeventloop.cpp:204
#52 0x00007f863a1e64b9 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1227
#53 0x00007f863a70d22c in QApplication::exec () at kernel/qapplication.cpp:3828
#54 0x00000000004117c1 in main (argc=<optimized out>, argv=<optimized out>) at /build/kdevelop-jGcNEc/kdevelop-4.7.3/app/main.cpp:582

Reported using DrKonqi
Comment 1 Kevin Funk 2016-09-08 07:20:46 UTC
*** Bug 368432 has been marked as a duplicate of this bug. ***
Comment 2 Kevin Funk 2016-09-08 08:11:20 UTC
Git commit 24acff13f8ca66c43b2fb518758459db4635615c by Kevin Funk.
Committed on 08/09/2016 at 08:08.
Pushed by kfunk into branch '5.0'.

Avoid crashes when switching branches

See comments in diff. Relaxed the assert a bit: only assert when we hit
an exact match. This code path will no longer trigger a crash in release
mode now either. If I did something wrong, some projects just don't get
a proper VCS info attached to their names (which is way better than
crashing).
FIXED-IN: 5.0.1

M  +14   -2    plugins/projectmanagerview/vcsoverlayproxymodel.cpp

http://commits.kde.org/kdevplatform/24acff13f8ca66c43b2fb518758459db4635615c
Comment 3 Kevin Funk 2016-09-08 10:07:31 UTC
*** Bug 363002 has been marked as a duplicate of this bug. ***
Comment 4 Kevin Funk 2016-09-08 10:20:25 UTC
Git commit c41d23ea47c277ef91a3bb5cfc6b0e72b7a99b4a by Kevin Funk.
Committed on 08/09/2016 at 10:19.
Pushed by kfunk into branch '1.7'.

Hotfix: Avoid crashes on branch switches

See 24acff13f8ca66c43b2fb518758459db4635615c for more info

Note: Skip this patch when merging into 5.0

FIXED-IN: 1.7.4

M  +4    -0    plugins/projectmanagerview/vcsoverlayproxymodel.cpp

http://commits.kde.org/kdevplatform/c41d23ea47c277ef91a3bb5cfc6b0e72b7a99b4a